# libdmtx

./: CMakeLists.txt  CMakeSettings.json
test/: CMakeLists.txt  Makefile.am
test/decode_test/: Makefile.am  decode_test.c
